# stt-gateway

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  examples_client_integration.py  pyproject.toml
bench/: DECISION.md  LICENSE_ANALYSIS.md  results.csv  run_bench.py  score_subjective.py  score_wer.py  stt_run_bench.py  subjective_scores.csv
bench/bench/: stt_results.csv
bench/prompts/: ar_darija.jsonl  ar_msa.jsonl  en.jsonl  fr.jsonl
bench/voice_refs/: .gitkeep
deploy/openshift/: configmap.yaml  deploy.sh  deployment.yaml  hpa.yaml  kustomization.yaml  litellm.yaml  monitoring.yaml  pvc.yaml  route.yaml  secret.example.yaml  service.yaml
src/tts_gateway/: __init__.py
src/tts_gateway/app/: audio.py  config.py  deps.py  logging_setup.py  main.py  metrics.py  voices.py
src/tts_gateway/app/backends/: __init__.py  base.py  chatterbox.py  dummy.py  fish_speech.py  higgs.py  loader.py  piper.py  xtts.py
src/tts_gateway/app/routes/: health.py  synthesize.py  transcribe.py  voices.py
src/tts_gateway/app/stt/: __init__.py  dummy.py  loader.py  moulsot.py
tests/: conftest.py  test_api.py  test_audio.py  test_backend_dummy.py  test_stt_api.py  test_stt_backend_dummy.py
