[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-gateway"
version = "0.1.0"
description = "Multilingual TTS gateway (FR/EN/AR) for banking virtual assistant"
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Gateway Voice Team" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "structlog>=24.1",
  "prometheus-client>=0.20",
  "soundfile>=0.12",
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.optional-dependencies]
# Common bench tooling (Whisper for round-trip WER, audio metrics)
# Note: pandas intentionally omitted — conflicts with TTS>=0.22 (requires pandas<2).
# Use bench-analytics extra when running alongside xtts is not needed.
bench = [
  "faster-whisper>=1.0",
  "jiwer>=3.0",
  "tqdm>=4.66",
  "streamlit>=1.36",
  "matplotlib>=3.8",
]
# Adds pandas for CSV analytics scripts. Incompatible with the xtts extra.
bench-analytics = [
  "tts-gateway[bench]",
  "pandas>=2.2",
]

# Per-backend extras (install only what you need)
# Coqui TTS pulls librosa/numba. Keep numba+llvmlite on wheel-backed ranges
# to avoid local LLVM builds (common on macOS x86).
xtts       = [
  "TTS>=0.22.0",
  "numba>=0.59,<0.60",
  "llvmlite>=0.42,<0.43",
]
chatterbox = ["chatterbox-tts; sys_platform != 'darwin'"]
higgs      = ["transformers>=4.45", "accelerate>=0.34", "torch>=2.2"]
fish       = ["fish-speech-lib"]
piper      = ["piper-tts"]
mms        = ["transformers>=4.45", "torch>=2.2"]
stt        = ["qwen-asr"]

dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
# B008: FastAPI uses `Depends()` / `Header()` in defaults — idiomatic.
# N811: upstream library names (e.g. `from TTS.api import TTS`) are out of our control.
ignore = ["E501", "B008", "N811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
